mainscreen with everyone's buttons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CP470FinalProjectGroup7</string>
+    <string name="introScreenText">CP470 FinalProject Group7</string>
 </resources>
